{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "PlayerMovement",
            "id": "d01d85db-b523-466a-a2bc-3b6dd450759f",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "826638a9-2e51-492e-8df9-9728b33eec48",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fe197ca3-7c69-42fa-a60e-2ff91ed1cb69",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}